# stormfusion-sevir

./: .gitignore  .pre-commit-config.yaml  COLAB_QUICKSTART.md  Dockerfile  LICENSE  Makefile  PREPROCESSING_GUIDE.md  README.md  SESSION_LOG.md  START_HERE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: base.yaml
data/: README.md
data/samples/: large_train_ids.txt  large_val_ids.txt  tiny_train_ids.txt  tiny_val_ids.txt
docs/: ARCHITECTURE_LADDER.md  DATA_DOWNLOAD.md  DATA_ENHANCEMENT.md  EVAL_METRICS.md  EXPERIMENT_PLAN.md  PAPER1_ARCHITECTURE.md  PROGRESS_REPORT.md  PROGRESS_UPDATE_OCT12.md  SEVIR_DATA_FIX.md  SGT_IMPLEMENTATION_SUMMARY.md  STAGE4_BREAKTHROUGH.md  STAGE4_NEXT_STEPS.md  STORMFLOW_WORKING_IMPLEMENTATIONS.md  WHY_PERCEPTUAL_LOSS_MATTERS.md
docs/AGENT_TASKS/: 00_setup.md  01_data_tiny.md  02_baseline_unet.md  03_baseline_convlstm.md  04_eval_baselines.md  05_add_losses_textures.md  06_optical_flow_baseline.md  (+9 more)
notebooks/: 00_quickstart.ipynb  01_env_check.ipynb  02_data_tiny.ipynb  03_train_unet_mse.ipynb  04_train_convlstm.ipynb  README.md
scripts/: analyze_sevir_extremes.py  build_dataset_index.py  download_all_sevir.sh  download_sevir_lightning.py  evaluate.py  inspect_sevir_files.py  preprocess_sevir_for_colab.py  test_fixed_dataloader.py  test_perceptual_loss.py  test_sgt_modules.py  train.py  train_convlstm.py  train_unet_baseline.py  train_unet_perceptual.py  train_unet_with_perceptual.py  verify_sevir_modalities.py
stormfusion/: __init__.py
tests/: test_dataset.py  test_metrics.py  test_models_forward.py
(+50 files in other folders)
