
[project]
name = "stormfusion"
version = "0.1.0"
description = "Small-to-large, simple-to-novel meteorology DL scaffold on SEVIR"
authors = [{name="StormFusion Team"}]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["stormfusion"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
